feat(controllers): integrate cabin class fare calculator, PNR generation, and payment handlers